--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img class="logo" src="assets/asset 6.png" alt="AirTable">
                     <img class="logo" src="assets/asset 7.png" alt="Box">
                     <img class="logo" src="assets/asset 9.png" alt="Asana">
-                    <img class="logo" src="assets/asset 8.svg" alt="Philips">
+                    <img class="logo" src="assets/asset 8.svg" alt="Philip">
                     
                 </div>
         </div>
